@@ -1,5 +1,12 @@
 2011-03-15  Tony Chang  <tony@chromium.org>
 
+        Revert r81147 and r81149, broke the chromium win build.
+
+        * WebKit.gyp:
+        * scripts/generate_devtools_grd.py: Removed.
+
+2011-03-15  Tony Chang  <tony@chromium.org>
+
         Fix chromium build using python 2.5 (with statement).
 
         * scripts/generate_devtools_grd.py:
